css/index.css
/* ... */
.nav-icons.right a{
    opacity: 0.7;
    transition: opacity 0.3s ease;
}

@media (max-width: 768px) {
    .nav-icons.right a:last-child {
        display: none;
    }
}

.nav-icons.right a:hover{
    opacity: 1;
}

.nav-logo {
    flex-grow: 1;
    display: flex;
    justify-content: center;
    align-items: center;
}

.main-card {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    border-radius: 10px;
    height: auto;
    padding: 75px 0;
    max-width: 1520px;
    width: 100%;
    background-color: #00ACDF;
}

.main-card-title{
    font-size: 48px;
    line-height: 72px;
    font-weight: 500;
    margin: 0;
    text-align: center;
}

@media (max-width: 768px) {
    .main-card-title {
        font-size: 20px;
        line-height: 30px;
        padding: 0 100px;
    }
}

.main-card-caption{
    display: inline-flex;
    justify-content: center;
    flex-wrap: wrap;
    font-size: 24px;
    line-height: 36px;
    font-weight: 400;
    gap: 4px;
    padding-bottom: 40px;
    text-align: center;
}

@media (max-width: 768px) {
    .main-card-caption {
        font-size: 16px;
        line-height: 24px;
        padding: 0 30px;
    }
}

.main-card-caption img {
    width: 1em;
    height: auto;
    vertical-align: middle;
}

.offer-card{
    background-color: transparent;
    border-radius: 6px;
    width: 327px;
    height: 40px;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    border: 1px solid #b3e6f5;
    transition: border 0.3s ease;
}

.offer-card:hover{
    border-color: white;
}

.offer-card img{
    transition: transform 0.3s ease;
}

.offer-card:hover img{
    transform: translateX(5px);
}

.offer-text {
    display: inline-flex;
    font-size: 16px;
    line-height: 24px;
    font-weight: 500;
    padding: 8px 16px;
}

.row {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    gap: 10px;
}

.small-card {
    background-color: rgba(0, 172, 223, 0.05);
    border-radius: 6px;
    max-width: 491px;
    width: 100%;
    height: 84px;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 16px;
    line-height: 20px;
    font-weight: 500;
    margin-bottom: 10px;
}

.reference-title{
    display: flex;
    justify-content: space-between;
}

.horizontal-scrollable {
    display: flex;
    flex-wrap: nowrap;
    overflow-x: auto;
    scroll-behavior: smooth;
    scrollbar-width: none;
}

.corp-card{
    position: relative;
    background-color: rgba(0, 172, 223, 0.05);
    border-radius: 10px;
    border: 2px solid transparent;
    width: 233px;
    height: 321px;
    display: flex;
    flex-direction: column;
    padding-top: 16px;
    margin-bottom: 10px;
    transition: border 0.3s ease, background-color 0.3s ease;
}

.secjur:hover{
    border-color: rgba(101, 77, 255, 1);
    background-color: rgba(101, 77, 255, 0.1);
}

.spaleck:hover{
    border-color: rgba(0, 129, 172, 1);
    background-color: rgba(0, 129, 172, 0.1);
}

.crs:hover{
    border-color: rgba(81, 27, 43, 1);
    background-color: rgba(81, 27, 43, 0.1);
}

.dohrn:hover{
    border-color: rgba(175, 185, 205, 1);
    background-color: rgba(175, 185, 205, 0.1);
}

.schmitt:hover{
    border-color: rgba(0, 118, 160, 1);
    background-color: rgba(0, 118, 160, 0.1);
}

.lüftring:hover{
    border-color: rgba(56, 56, 56, 1);
    background-color: rgba(56, 56, 56, 0.1);
}

.corp-card:hover .corp-text{
    opacity: 1;
}

.corp-card img {
    position: absolute;
    transition: transform 0.5s ease;
}

.corp-card .secjur-1{
    top: 60px;
    left: 28px;
}

.corp-card .secjur-2{
    top: 77px;
    left: 56px;
}

.corp-card .secjur-3{
    top: 104px;
    left: 125px;
}

.corp-card:hover .secjur-1{
    transform: translateY(-5px);
}

.corp-card:hover .secjur-2{
    transform: translateY(-5px) scale(1.05);
}

.corp-card:hover .secjur-3{
    transform: scale(1.1);
}

.corp-card .spaleck-1{
    top: 54px;
    left: 28px;
}

.corp-card .spaleck-2{
    top: 123px;
    left: 57px;
}

.corp-card .spaleck-3{
    top: 144px;
    left: 39px;
}

.corp-card:hover .spaleck-1{
    transform: translateY(-5px);
}

.corp-card:hover .spaleck-2{
    transform: translateX(5px);
}

.corp-card:hover .spaleck-3{
    transform: translateY(5px);
}

.corp-card .crs-1{
    top: 50px;
    left: 28px;
}

.corp-card .crs-2{
    top: 98px;
    left: 52px;
}

.corp-card .crs-3{
    top: 113px;
    left: 150px;
}

.corp-card:hover .crs-1{
    transform: translateY(-5px);
}

.corp-card:hover .crs-2{
    transform: translateY(5px);
}

.corp-card:hover .crs-3{
    transform: translateY(5px) translateX(5px);
}

.corp-card .dohrn-1{
    top: 58px;
    left: 28px;
}

.corp-card .dohrn-2{
    top: 115px;
    left: 99px;
}

.corp-card:hover .dohrn-1{
    transform: translateY(-5px);
}

.corp-card:hover .dohrn-2{
    transform: translateY(5px) translateX(5px) scale(1.05);
}

.corp-card .schmitt-1{
    top: 58px;
    left: 28px;
}

.corp-card .schmitt-2{
    top: 103px;
    left: 41px;
}

.corp-card:hover .schmitt-1{
    transform: translateY(-5px) scale(0.95);
}

.corp-card:hover .schmitt-2{
    transform: translateY(5px);
}

.corp-card .lüftring-1{
    top: 55px;
    left: 33px;
}

.corp-card .lüftring-2{
    top: 75px;
    left: 145px;
}

.corp-card:hover .lüftring-1{
    transform: scale(1.1) translateX(5px);
}

.corp-card:hover .lüftring-2{
    transform: translateX(-10px);
}


.corp-card-square{
    position: relative;
    border-radius: 6px;
    width: 201px;
    height: 201px;
    align-self: flex-start;
    margin-left: 16px;
}

.square-color-1 {
    background-image: radial-gradient(rgba(101, 77, 255, 0.6), rgba(147, 131, 255, 0.6));
}

.square-color-2 {
    background-image: radial-gradient(rgba(0, 129, 172, 0.6), rgba(0, 163, 218, 0.6));
}

.square-color-3 {
    background-image: radial-gradient(rgba(81, 27, 43, 0.6), rgba(104, 35, 56, 0.6));
}
/* ... */

